[gd_scene load_steps=16 format=2]

[ext_resource path="res://Dealer2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Dealer Sprites/Right leg up Dealer.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Dealer Sprites/Standing still Dealer.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Dealer Sprites/Left leg up Dealer.png" type="Texture" id=4]
[ext_resource path="res://OverLap/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://EnemyNPC/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://OverLap/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://EnemyNPC/PlayerDetectionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://OverLap/HitBox.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 8.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.0345
height = 25.5164

[sub_resource type="CircleShape2D" id=4]
radius = 136.0

[sub_resource type="CircleShape2D" id=5]
radius = 11.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 8.0
height = 0.0

[node name="Dealer2" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12.708 )
rotation = 1.5708
scale = Vector2( 0.3, 0.2 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
max_health = 12

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 8 )]
collision_mask = 0

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 4 )

[node name="HitBox" parent="." instance=ExtResource( 9 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 3.307 )
scale = Vector2( 0.784, 1.007 )
shape = SubResource( 5 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
[editable path="SoftCollision"]
